--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   }
 }
 
+
+
+
 @keyframes glitch {
   0% {
     text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
@@ -86,8 +89,8 @@
 }
 
 .profile-photo {
-  opacity: 0;
-  transform: scale(0.8) translateY(20px);
+  opacity: 100;
+  /* transform: scale(0.8) translateY(20px); */
 }
 
 .profile-container:hover .profile-photo {
